--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -11,10 +11,12 @@
 {
   <h3>No items have been added yet!</h3>
 } 
+  @foreach(Item item in Model)
+  {
+      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId })</li>
+  }
 
-@foreach (Item item in Model)
-{
-  <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.Category.Name</li>
-}
+  
 
 <p>@Html.ActionLink("Add new item", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
